k8s/basic-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-app
  labels:
    app: basic-app
    version: v1.5
spec:
  replicas: 1
  template:
    metadata:
      name: basic-app
      labels:
        app: basic-app
        app.kubernetes.io/name: basic-app
        app.kubernetes.io/version: v1.5
        version: v1.5
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "basic-app"
        # dapr.io/app-port: "8080"
#        dapr.io/config: "tracing"
    spec:
      containers:
        - name: basic-app
          image: vincentfree/basic-app:v1.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 300Mi
              cpu: 100m
            limits:
              memory: 800Mi
              cpu: 1000m
      restartPolicy: Always
  selector:
    matchLabels:
      app: basic-app
---
apiVersion: v1
kind: Service
metadata:
  name: basic-app
  labels:
    app.kubernetes.io/name: basic-app
    app.kubernetes.io/version: v1.5
spec:
  selector:
    app: basic-app
  ports:
    - port: 8080
      protocol: TCP
  type: ClusterIP
