k8s/order-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-backend
  labels:
    app: order-backend
    version: v1.29
spec:
  replicas: 1
  template:
    metadata:
      name: order-backend
      labels:
        app: order-backend
        app.kubernetes.io/name: order-backend
        app.kubernetes.io/version: v1.29
        version: v1.29
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "order-backend"
        dapr.io/app-port: "8080"
        dapr.io/config: "tracing"
    spec:
      containers:
        - name: order-backend
          image: vincentfree/order-backend:v1.29
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /hello
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              port: 8080
              path: /hello
            initialDelaySeconds: 20

          resources:
            requests:
              memory: 300Mi
              cpu: 100m
            limits:
              memory: 800Mi
              cpu: 1000m
      restartPolicy: Always
  selector:
    matchLabels:
      app: order-backend
---
apiVersion: v1
kind: Service
metadata:
  name: order-backend
  labels:
    app.kubernetes.io/name: order-backend
    app.kubernetes.io/version: v1.29
spec:
  selector:
    app: order-backend
  ports:
    - port: 8080
      protocol: TCP
  type: ClusterIP
