k8s/order-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-client
  labels:
    app: order-client
spec:
  replicas: 1
  template:
    metadata:
      name: order-client
      labels:
        app: order-client
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "order-client"
        dapr.io/app-port: "8080"
        dapr.io/config: "tracing"
    spec:
      containers:
        - name: order-client
          image: vincentfree/order-client:v1.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      restartPolicy: Always
  selector:
    matchLabels:
      app: order-client
---
apiVersion: v1
kind: Service
metadata:
  name: order-client
spec:
  selector:
    app: order-client
  ports:
    - port: 8080
      protocol: TCP
  type: ClusterIP
